[f] 104a - Fix officer page’s header on small screen
https://www.pivotaltracker.com/story/show/107028752

--- a/common/static/sass/officer_page.sass
+++ b/common/static/sass/officer_page.sass
@@ -6,3 +6,6 @@
   padding-left: 15px
   .fa
     padding-right: 5px
+
+  @media (min-width: $screen-xs-min) and (max-width: $screen-sm-max)
+    line-height: 53px
